--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;
-font-size:40px}
+body {background-color:#9971;}
+h1,h2   {color: #197;}
+p {color:#997;
+    font-size:20px;
+	padding:10px 50px 10px 1px:
+   }
